@@ -1,6 +1,6 @@
 
 /*
- * Copyright  1999-2004 The Apache Software Foundation.
+ * Copyright  1999-2010 The Apache Software Foundation.
  *
  *  Licensed under the Apache License, Version 2.0 (the "License");
  *  you may not use this file except in compliance with the License.
@@ -21,6 +21,7 @@ package org.apache.xml.security.keys.keyresolver.implementations;
 
 import java.security.PublicKey;
 import java.security.cert.X509Certificate;
+import java.util.Iterator;
 
 import org.apache.xml.security.exceptions.XMLSecurityException;
 import org.apache.xml.security.keys.content.X509Data;
@@ -99,8 +100,9 @@ public class X509IssuerSerialResolver extends KeyResolverSpi {
          
          int noOfISS = x509data.lengthIssuerSerial();
 
-         while (storage.hasNext()) {
-            X509Certificate cert = storage.next();
+         Iterator storageIterator = storage.getIterator();
+         while (storageIterator.hasNext()) {
+            X509Certificate cert = (X509Certificate)storageIterator.next();
             XMLX509IssuerSerial certSerial = new XMLX509IssuerSerial(element.getOwnerDocument(), cert);
 
             if (log.isDebugEnabled()) {
