@@ -1,5 +1,5 @@
 /*
- * Copyright  1999-2004 The Apache Software Foundation.
+ * Copyright  1999-2010 The Apache Software Foundation.
  *
  *  Licensed under the Apache License, Version 2.0 (the "License");
  *  you may not use this file except in compliance with the License.
@@ -20,6 +20,7 @@ package org.apache.xml.security.keys.keyresolver.implementations;
 
 import java.security.PublicKey;
 import java.security.cert.X509Certificate;
+import java.util.Iterator;
 
 
 import org.apache.xml.security.exceptions.XMLSecurityException;
@@ -119,8 +120,9 @@ public class X509SubjectNameResolver extends KeyResolverSpi {
                                       BaseURI);
          }
 
-         while (storage.hasNext()) {
-            X509Certificate cert = storage.next();
+         Iterator storageIterator = storage.getIterator();
+         while (storageIterator.hasNext()) {
+            X509Certificate cert = (X509Certificate)storageIterator.next();
             XMLX509SubjectName certSN =
                new XMLX509SubjectName(element.getOwnerDocument(), cert);
 
