@@ -1,6 +1,5 @@
-
 /*
- * Copyright  1999-2004 The Apache Software Foundation.
+ * Copyright  1999-2010 The Apache Software Foundation.
  *
  *  Licensed under the Apache License, Version 2.0 (the "License");
  *  you may not use this file except in compliance with the License.
@@ -22,6 +21,7 @@ import java.security.cert.X509Certificate;
 import java.util.ArrayList;
 import java.util.Iterator;
 import java.util.List;
+import java.util.NoSuchElementException;
 
 import org.apache.xml.security.keys.storage.implementations.KeyStoreResolver;
 import org.apache.xml.security.keys.storage.implementations.SingleCertificateResolver;
@@ -65,8 +65,8 @@ public class StorageResolver {
     * @param resolver
     */
    public void add(StorageResolverSpi resolver) {
-	   if (_storageResolvers==null)
-		   _storageResolvers=new ArrayList();
+	   if (_storageResolvers == null)
+		   _storageResolvers = new ArrayList();
       this._storageResolvers.add(resolver);
 
       this._iterator = null;
@@ -116,29 +116,22 @@ public class StorageResolver {
    /**
     * Method getIterator
     * @return the iterator for the resolvers.
-    *
     */
    public Iterator getIterator() {
-
-      if (this._iterator == null) {
-    	 if (_storageResolvers==null)
-   		   _storageResolvers=new ArrayList();
-         this._iterator = new StorageResolverIterator(this._storageResolvers.iterator());
-      }
-
-      return this._iterator;
+      return new StorageResolverIterator(this._storageResolvers.iterator());
    }
 
    /**
     * Method hasNext
     *
-    * @return true if there is more elements.
+    * @return true if there are more elements.
+    * @deprecated no way to restart the iteration, use {@link #getIterator() getIterator()} instead
     */
    public boolean hasNext() {
 
       if (this._iterator == null) {
-    	  if (_storageResolvers==null)
-   		   _storageResolvers=new ArrayList();
+    	  if (_storageResolvers == null)
+   		   _storageResolvers = new ArrayList();
          this._iterator = new StorageResolverIterator(this._storageResolvers.iterator());
       }
 
@@ -149,13 +142,22 @@ public class StorageResolver {
     * Method next
     *
     * @return the next element
+    * @deprecated no way to restart the iteration, use {@link #getIterator() getIterator()} instead
     */
    public X509Certificate next() {
+      
+      if (this._iterator == null) {
+         if (_storageResolvers == null)
+            _storageResolvers = new ArrayList();
+         this._iterator = new StorageResolverIterator(this._storageResolvers.iterator());
+      }
+      
       return (X509Certificate) this._iterator.next();
    }
 
    /**
     * Class StorageResolverIterator
+    * This iterates over all the Certificates found in all the resolvers.
     *
     * @author $Author$
     * @version $Revision$
@@ -165,23 +167,40 @@ public class StorageResolver {
       /** Field _resolvers */
       Iterator _resolvers = null;
 
+      /** Field _currentResolver */
+      Iterator _currentResolver = null;
+
       /**
-       * Constructor FilesystemIterator
+       * Constructor StorageResolverIterator
        *
        * @param resolvers
        */
       public StorageResolverIterator(Iterator resolvers) {
          this._resolvers = resolvers;
+         _currentResolver = findNextResolver();
       }
 
       /** @inheritDoc */
       public boolean hasNext() {
-	  return _resolvers.hasNext();
+         if (_currentResolver == null) {
+            return false;
+         }
+            
+         if (_currentResolver.hasNext()) {
+            return true;
+         }
+
+         _currentResolver = findNextResolver();
+         return (_currentResolver != null);
       }
 
       /** @inheritDoc */
       public Object next() {
-	  return _resolvers.next();
+         if (hasNext()) {
+            return _currentResolver.next();
+         }
+         
+         throw new NoSuchElementException();
       }
 
       /**
@@ -190,6 +209,20 @@ public class StorageResolver {
       public void remove() {
          throw new UnsupportedOperationException(
             "Can't remove keys from KeyStore");
+      }
+
+      // Find the next storage with at least one element and return its Iterator
+      private Iterator findNextResolver() {
+         
+         while (_resolvers.hasNext()) {
+            StorageResolverSpi resolverSpi = (StorageResolverSpi)_resolvers.next();
+            Iterator iter = resolverSpi.getIterator();
+            if (iter.hasNext()) {
+               return iter;
+            }
+         }
+         
+         return null;
       }
    }
 }
